# PDC-Cheque-Management

./: .gitignore  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  pyproject.toml  test_ex.py  test_supplier.py
pdc_cheque_management/: hooks.py  modules.txt  patches.txt
pdc_cheque_management/pdc/: api.py
pdc_cheque_management/pdc/doctype/pdc_cheque/: pdc_cheque.json
pdc_cheque_management/pdc/doctype/pdc_invoice_detail/: pdc_invoice_detail.json
pdc_cheque_management/pdc/module_def/pdc_cheque_management/: pdc.json
pdc_cheque_management/pdc/page/pdc_clearance_tool/: pdc_clearance_tool.json
pdc_cheque_management/pdc/print_format/pdc_cheque_receipt/: pdc_cheque_receipt.json
pdc_cheque_management/pdc/report/pdc_outstanding_statement/: pdc_outstanding_statement.json  pdc_outstanding_statement.py
pdc_cheque_management/pdc/workspace/pdc_management/: pdc_management.json
pdc_cheque_management/pdc_banking_automation/: api.py
pdc_cheque_management/pdc_banking_automation/doctype/pdc_banking_settings/: pdc_banking_settings.json  pdc_banking_settings.py
pdc_cheque_management/pdc_banking_automation/doctype/pdc_cheque/: pdc_cheque.js  pdc_cheque.json  pdc_cheque.py
pdc_cheque_management/pdc_banking_automation/doctype/pdc_invoice_detail/: pdc_invoice_detail.json  pdc_invoice_detail.py
pdc_cheque_management/pdc_banking_automation/patches/: clear_custom_workspaces.py
pdc_cheque_management/pdc_cheque_management/: api.py
pdc_cheque_management/pdc_cheque_management/patches/: clear_custom_workspaces.py
pdc_cheque_management/public/css/: pdc_style.css
(+21 files in other folders)
