[project]
name = "pdc_cheque_management"
authors = [
    { name = "Antigravity", email = "support@antigravity.ai" }
]
description = "Advanced PDC Cheque Management with Automated Invoice Allocation"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pdc_cheque_management"

[project.urls]
Homepage = "https://github.com/nexgenerptechnologies/PDC-Cheque-Management"


[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
